# IC-Copilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  app.py  pyproject.toml  requirements.txt  server.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
benchmarks/: README.md  baseline.json  baseline.md
data/: adr_profiles.csv  geography_exposure_playbooks.csv  industry_playbooks.csv  metric_ontology.csv  peer_universes.csv  sector_kpi_playbooks.csv  source_requirements.csv
docs/: architecture.md  development.md  methodology.md  providers.md  quickstart.md
equity_research/: __init__.py  adr_profiles.py  alerts.py  analysis.py  benchmarking.py  budget.py  causal_thesis_graph.py  claim_validation.py  company_economics.py  company_model.py  config.py  consensus_import.py  contributor_tools.py  conviction_audit.py  conviction_chain.py  coverage.py  coverage_expansion.py  credit_lens.py  disclosure_intelligence.py  driver_attribution.py  driver_templates.py  earnings_surprise_proxy.py  evidence_closure.py  evidence_work_order.py  expectations.py  external_evidence.py  global_coverage.py  global_peers.py  historical_references.py  ic_one_pager.py  idea_engine.py  llm_vault.py  local_secrets.py  management_sources.py  manual_data.py  market_capture_workflow.py  market_implied.py  memo.py  memory.py  metric_intelligence.py  (+29 more)
examples/: budget_modes.example.json  coverage_universe.csv  jurisdiction_sources.csv  (+4 more)
(+89 files in other folders)
