[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ic-copilot"
version = "0.1.0"
description = "Evidence-first investment committee copilot for auditable equity research"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "IC Copilot contributors"}]
keywords = ["equity-research", "investment-research", "streamlit", "llm", "sec-edgar"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "streamlit>=1.32",
  "pypdf>=4",
  "keyring>=25",
]

[project.urls]
Homepage = "https://ic-copilot.streamlit.app/"
Repository = "https://github.com/mwsp-code/IC-Copilot"
Issues = "https://github.com/mwsp-code/IC-Copilot/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.9",
]

[tool.setuptools.packages.find]
include = ["equity_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
